# maplibre-native

./: CMakePresets.json  build.bat  build_windows_opengl.lnk
include/mbgl/gl/: buffer_allocator.hpp  uniform_buffer_gl.hpp
include/mbgl/map/: map.hpp
include/mbgl/mtl/: renderable_resource.hpp  texture2d.hpp
platform/darwin/src/: headless_backend_cgl.mm
platform/default/include/mbgl/mtl/: headless_backend.hpp
platform/default/include/mbgl/storage/: offline_database.hpp
platform/default/src/mbgl/mtl/: headless_backend.cpp
platform/default/src/mbgl/storage/: database_file_source.cpp  offline_database.cpp
platform/glfw/: glfw_backend.hpp  glfw_gl_backend.cpp  glfw_gl_backend.hpp  glfw_renderer_frontend.cpp  glfw_view.cpp  glfw_view.hpp  main.cpp  platform_paths.hpp  settings_json.cpp
platform/windows/: Get-VendorPackages.ps1  vcpkg-configuration.json  windows.cmake
platform/windows/maplibre_embed/: CMakeLists.txt  gpu_surface_d3d.cpp  gpu_surface_d3d.h  map_embedder.cpp  map_embedder.h  maplibre_embed.cpp  maplibre_embed.h  style_crash_test.cpp
platform/windows/src/: headless_backend_egl.cpp
src/mbgl/gl/: buffer_allocator.cpp  uniform_buffer_gl.cpp
src/mbgl/map/: map.cpp  map_impl.hpp
src/mbgl/mtl/: offscreen_texture.cpp  texture2d.cpp
src/mbgl/renderer/: render_orchestrator.cpp  render_orchestrator.hpp  render_source.hpp  render_tile.cpp  render_tree.hpp  renderer_impl.cpp  tile_pyramid.cpp  tile_pyramid.hpp
src/mbgl/renderer/buckets/: line_bucket.cpp
